--- a/usr/css/_main.scss
+++ b/usr/css/_main.scss
@@ -15,6 +15,9 @@
     }
     .main-top-select{
         display:flex;
+        margin-top:2.5rem;
+        margin-left:auto;
+        gap: 0.4rem;
         select{
             flex-grow:0;
             color:#fff;
@@ -23,6 +26,7 @@
             border:1px solid #fff;
             width:7.5rem;
             gap:.6rem;
+            cursor:pointer;
         }
     }
     .main-search-title{
@@ -61,40 +65,153 @@
 }
 
 #mainIntro{
-    background:url(/common/img/back_cloud.png);
+    background:url(/common/img/back_cloud.jpg);
     background-size:cover;
     clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 100% 100%, 85% 100%, 15% 100%, 0 100%, 0% 85%);
     top: -5rem;
     position: relative;
+    z-index:1;
+    // &:before{
+    //     content:'';
+    //     width:100%;
+    //     height:100%;
+    //     background:#fff;
+    //     position:absolute;
+    //     top:0;
+    //     left:0;
+    //     z-index:0;
+    // }
 }
     
+/* 소개(디지털 아카이브, 유네스코 등재) */
+
 #mainIntroInner{
     justify-content: center;
     display:flex;
     > div{
         display:flex;
-        justify-content:center;
         flex-direction: column;
+        align-items: center;
+        width:50%;
+        .main-introimg-div{
+            width:50%;
+            height:13.5rem;
+            img{
+                height: 5rem;
+                margin: 5rem auto 2.5rem;
+            }
+        }
+        p{
+            color:#4f4f4f;
+            line-height:1.6;
+            font-size:1.2rem;
+        }
+        &.vt-line{
+            width:2px;
+            height: 21rem;
+            background: #1e6794;
+            margin: 5rem 0 8rem;
+        }
     }
     .main-intro-left{
         h2{
             color:#002855;
+            font-size:2.1rem;
             span{
                 color:#e60a19;
             }
         }
-        img{
-            width:6rem;
-            margin: 5rem auto 2.5rem;
-        }
         p{
-            color:#4f4f4f;
-            line-height:1.4;
-            font-size:1rem;
+            &.main-intro-subT{
+                font-family:'thai';
+                margin:.5rem 0 1.5rem;
+            }
         }
+        
     }
     .main-intro-right{
+        h2{
+            color:#1e6794;
+            font-size:2.1rem;
+            font-family:'SB-L';
+        }
+        p{
+            &.main-intro-subT{
+                color:#7f7f7f;
+                margin:3rem 0 .75rem;
+            }
+        }
+    }
+}
 
+/* 디지털 소장자료 */
+
+#mainCollection{
+    width:100%;
+    height:50rem;
+    background:url(/common/img/main_coll_back.jpg) no-repeat;
+    background-size:cover;
+    top: -5rem;
+    position: relative;
+    padding: 9rem 0 0;
+}
+
+#mainCollInner{
+    .main-coll-text{
+        color:#fff;
+        h3{
+            font-size:2.1rem;
+            font-family:'GS-M';
+            line-height: 1.3;
+            span{
+                display:block;
+            }    
+        }
+        p{
+            &.main-coll-subT{
+                margin:1.3rem 0 4.3rem 0;
+                font-size:.9rem;
+                letter-spacing: 2px;
+            }
+        }
+        .main-coll-button{
+            display:flex;
+            justify-content:center;
+            align-items:center;
+            width:5rem;
+            border:2px solid #fff;
+            padding: 0.1rem 1rem 0.1rem 1.25rem;
+        }
+    }
+    .main-coll-items{
+        max-width:768px;
+        padding:0 .5rem;
+        ul{
+            display:grid;
+            grid-template-columns:1fr 1fr 1fr;
+            li{
+                display:flex;
+                flex-direction:column;
+                position:relative;
+                img{
+                    aspect-ratio: 5/7.4;
+                    width:100%;
+                }
+                label{
+                    position:absolute;
+                    bottom:0;
+                    left:0;
+                    display:block;
+                    width:100%;
+                    padding:1.5rem 0;
+                    font-size:.8rem;
+                    color:#f7f7f7;
+                    text-align:center;
+                    background:#fff;
+                    
+                }
+            }
+        }
     }
 }
 /*main.css End*/
