--- a/common/css/default.scss
+++ b/common/css/default.scss
@@ -13,53 +13,53 @@
   /* 나눔스퀘어 */
   
   @font-face {
-    font-family: "NS-R";
+    font-family: "NS";
     src: url("/common/font/NanumSquare_acR.ttf") format("truetype");
   }
   @font-face {
-    font-family: "NS-L";
+    font-family: "NS";
     src: url("/common/font/NanumSquare_acL.ttf") format("truetype");
   }
   @font-face {
-    font-family: "NS-B";
+    font-family: "NS";
     src: url("/common/font/NanumSquare_acB.ttf") format("truetype");
   }
   @font-face {
-    font-family: "NS-EB";
+    font-family: "NS";
     src: url("/common/font/NanumSquare_acEB.ttf") format("truetype");
   }
   
   /* 순바탕 */
   
   @font-face {
-    font-family: "SB-M";
+    font-family: "SB";
     src: url("/common/font/SunBatang-Medium.ttf") format("truetype");
   }
 
   @font-face {
-    font-family: "SB-B";
+    font-family: "SB";
     src: url("/common/font/SunBatang-Bold.ttf") format("truetype");
   }
 
   @font-face {
-    font-family: "SB-L";
+    font-family: "SB";
     src: url("/common/font/SunBatang-Light.ttf") format("truetype");
   }
 
   /* 지마켓 Sans */
 
   @font-face {
-    font-family: "GS-M";
+    font-family: "GS";
     src: url("/common/font/GmarketSansTTFMedium.ttf") format("truetype");
   }
 
   @font-face {
-    font-family: "GS-L";
+    font-family: "GS";
     src: url("/common/font/GmarketSansTTFLight.ttf") format("truetype");
   }
 
   @font-face {
-    font-family: "GS-B";
+    font-family: "GS";
     src: url("/common/font/GmarketSansTTFBold.ttf") format("truetype");
   }
 
