--- a/module/css/dropDown.css
+++ b/module/css/dropDown.css
@@ -135,6 +135,7 @@
 }
 .dropdown-list a {
 	color: rgba(var(--white), 1);
+	font-family: var(--sunBatang);
 }
 .dropdown-list > .dropdown-items {
 	display: block;
