--- a/common/css/variables.scss
+++ b/common/css/variables.scss
@@ -37,11 +37,11 @@
     --font13: 13px;
 
     /*font-family*/
-    --noto: 'Noto Sans KR', sans-serif;
-    --gowun: 'Gowun Dodum', sans-serif;
-    --Gangwon: 'GangwonEdu_OTFBoldA';
-    --Teko:'Teko', sans-serif;
+    --gMark: 'GS', sans-serif;
+    --sunBatang: 'SB', sans-serif;
+    --Nanum: 'NS';
+    --thai:'thai', sans-serif;
 
-   
+    // (var(--gMark); 사용법
 
 }
