--- a/common/css/default.scss
+++ b/common/css/default.scss
@@ -7,6 +7,7 @@
 
 @font-face {
     font-family: "thai";
+    font-weight: normal;
     src: url("/common/font/AdobeThai-Regular.otf") format("opentype");
   }
   
@@ -14,18 +15,22 @@
   
   @font-face {
     font-family: "NS";
+    font-weight: normal;
     src: url("/common/font/NanumSquare_acR.ttf") format("truetype");
   }
   @font-face {
     font-family: "NS";
+    font-weight: 100;
     src: url("/common/font/NanumSquare_acL.ttf") format("truetype");
   }
   @font-face {
     font-family: "NS";
+    font-weight: bold;
     src: url("/common/font/NanumSquare_acB.ttf") format("truetype");
   }
   @font-face {
     font-family: "NS";
+    font-weight: 900;
     src: url("/common/font/NanumSquare_acEB.ttf") format("truetype");
   }
   
@@ -33,16 +38,19 @@
   
   @font-face {
     font-family: "SB";
+    font-weight: normal;
     src: url("/common/font/SunBatang-Medium.ttf") format("truetype");
   }
 
   @font-face {
     font-family: "SB";
+    font-weight: bold;
     src: url("/common/font/SunBatang-Bold.ttf") format("truetype");
   }
 
   @font-face {
     font-family: "SB";
+    font-weight: 100;
     src: url("/common/font/SunBatang-Light.ttf") format("truetype");
   }
 
@@ -50,19 +58,23 @@
 
   @font-face {
     font-family: "GS";
+    font-weight: normal;
     src: url("/common/font/GmarketSansTTFMedium.ttf") format("truetype");
   }
 
   @font-face {
     font-family: "GS";
+  font-weight: 100;
     src: url("/common/font/GmarketSansTTFLight.ttf") format("truetype");
   }
 
   @font-face {
     font-family: "GS";
+    font-weight: bold;
     src: url("/common/font/GmarketSansTTFBold.ttf") format("truetype");
   }
 
 body{
-    font-family:'NS-R';
+    font-family:'NS';
+    font-weight: normal;
 }
