--- a/common/css/variables.css
+++ b/common/css/variables.css
@@ -7,17 +7,17 @@
 	--marineblue: 0, 51, 108;
 	--coral: 190, 80, 25;
 	/* size */
-	--font110: 110px;
-	--font36: 36px;
-	--font28: 28px;
-	--font26: 26px;
-	--font24: 24px;
-	--font22: 22px;
-	--font20: 20px;
-	--font18: 18px;
-	--font16: 16px;
-	--font14: 14px;
-	--font13: 13px;
+	--font42: 2.1rem;
+	--font36: 1.8rem;
+	--font28: 1.4rem;
+	--font26: 1.3rem;
+	--font24: 1.2rem;
+	--font22: 1.1rem;
+	--font20: 1rem;
+	--font18: .9rem;
+	--font16: .8rem;
+	--font14: .7rem;
+	--font13: .65rem;
 	/*font-family*/
 	--gMark: "GS", sans-serif;
 	--sunBatang: "SB", sans-serif;
