--- a/common/css/variables.scss
+++ b/common/css/variables.scss
@@ -24,17 +24,17 @@
     --coral: 190, 80, 25;
 
     /* size */
-    --font110: 110px;
-    --font36: 36px;
-    --font28: 28px;
-    --font26: 26px;
-    --font24: 24px;
-    --font22: 22px;
-    --font20: 20px;
-    --font18: 18px;
-    --font16: 16px;
-    --font14: 14px;
-    --font13: 13px;
+    --font42: 2.1rem;
+    --font36: 1.8rem;
+    --font28: 1.4rem;
+    --font26: 1.3rem;
+    --font24: 1.2rem;
+    --font22: 1.1rem;
+    --font20: 1rem;
+    --font18: .9rem;
+    --font16: .8rem;
+    --font14: .7rem;
+    --font13: .65rem;
 
     /*font-family*/
     --gMark: 'GS', sans-serif;
@@ -42,6 +42,6 @@
     --Nanum: 'NS';
     --thai:'thai', sans-serif;
 
-    // (var(--gMark); 사용법
+    // var(--gMark); 사용법
 
 }
