--- a/common/css/variables.scss
+++ b/common/css/variables.scss
@@ -22,6 +22,7 @@
     --rad: 230, 10, 25;
     --marineblue: 0, 51, 108;
     --coral: 190, 80, 25;
+    --opcoral: 210, 112, 35 ;
 
     /* size */
     --font42: 2.1rem;
