--- a/usr/style.css
+++ b/usr/style.css
@@ -1,179 +1,190 @@
 @charset "UTF-8";
 /*main_css*/
 #mainSearch {
-  background: url(/common/img/main_back_01.jpg) no-repeat;
-  width: 100%;
-  height: 90vh;
-  background-size: cover;
+	background: url(/common/img/main_back_01.jpg) no-repeat;
+	width: 100%;
+	height: 90vh;
+	background-size: cover;
 }
 #mainSearch #mainSearchInner {
-  max-width: 1280px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2.8rem;
+	max-width: 1280px;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 2.8rem;
 }
 #mainSearch .main-top-select {
-  display: flex;
-  margin-top: 2.5rem;
-  margin-left: auto;
-  gap: 0.4rem;
+	display: flex;
+	margin-top: 2.5rem;
+	margin-left: auto;
+	gap: 0.4rem;
 }
 #mainSearch .main-top-select select {
-  flex-grow: 0;
-  color: #fff;
-  padding: 0.5rem 1.8rem;
-  font-size: 0.6rem;
-  border: 1px solid #fff;
-  width: 7.5rem;
-  gap: 0.6rem;
-  cursor: pointer;
+	flex-grow: 0;
+	color: #fff;
+	padding: 0.5rem 1.8rem;
+	font-size: 0.6rem;
+	border: 1px solid #fff;
+	width: 7.5rem;
+	gap: 0.6rem;
+	cursor: pointer;
 }
 #mainSearch .main-search-title {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  color: #fff;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 1rem;
+	color: #fff;
 }
 #mainSearch .main-search-title img {
-  width: 3rem;
+	width: 3rem;
 }
 #mainSearch .main-search-title h2 {
-  font-size: 1.5rem;
+	font-size: 1.5rem;
 }
 #mainSearch .main-search-bar {
-  width: 700px;
-  background: #ededed;
-  padding: 1rem;
-  display: flex;
+	width: 700px;
+	background: #ededed;
+	padding: 1rem;
+	display: flex;
 }
 #mainSearch .main-search-bar input {
-  background: #fff;
-  flex-basis: 75%;
-  padding: 0.8rem;
+	background: #fff;
+	flex-basis: 75%;
+	padding: 0.8rem;
 }
 #mainSearch .main-search-bar button {
-  background: #1e3964;
-  color: #fff;
-  flex-basis: 25%;
-  padding: 0.8rem;
+	background: #1e3964;
+	color: #fff;
+	flex-basis: 25%;
+	padding: 0.8rem;
 }
 
 #mainIntro {
-  background: url(/common/img/back_cloud.jpg);
-  background-size: cover;
-  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 100% 100%, 85% 100%, 15% 100%, 0 100%, 0% 85%);
-          clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 100% 100%, 85% 100%, 15% 100%, 0 100%, 0% 85%);
-  top: -5rem;
-  position: relative;
-  z-index: 1;
+	background: url(/common/img/back_cloud.jpg);
+	background-size: cover;
+	-webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 100% 100%, 85% 100%, 15% 100%, 0 100%, 0% 85%);
+	        clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 100% 100%, 85% 100%, 15% 100%, 0 100%, 0% 85%);
+	top: -5rem;
+	position: relative;
+	z-index: 1;
 }
 
 /* 소개(디지털 아카이브, 유네스코 등재) */
 #mainIntroInner {
-  justify-content: center;
-  display: flex;
+	justify-content: center;
+	display: flex;
 }
 #mainIntroInner > div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 50%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 50%;
 }
 #mainIntroInner > div .main-introimg-div {
-  width: 50%;
-  height: 13.5rem;
+	width: 50%;
+	height: 13.5rem;
 }
 #mainIntroInner > div .main-introimg-div img {
-  height: 5rem;
-  margin: 5rem auto 2.5rem;
+	height: 5rem;
+	margin: 5rem auto 2.5rem;
 }
 #mainIntroInner > div p {
-  color: #4f4f4f;
-  line-height: 1.6;
-  font-size: 1.2rem;
+	color: #4f4f4f;
+	line-height: 1.6;
+	font-size: 1.2rem;
 }
 #mainIntroInner > div.vt-line {
-  width: 2px;
-  height: 21rem;
-  background: #1e6794;
-  margin: 5rem 0 8rem;
+	width: 2px;
+	height: 21rem;
+	background: #1e6794;
+	margin: 5rem 0 8rem;
 }
 #mainIntroInner .main-intro-left h2 {
-  color: #002855;
-  font-size: 2.1rem;
+	color: #002855;
+	font-size: 2.1rem;
 }
 #mainIntroInner .main-intro-left h2 span {
-  color: #e60a19;
+	color: #e60a19;
 }
 #mainIntroInner .main-intro-left p.main-intro-subT {
-  font-family: "thai";
-  margin: 0.5rem 0 1.5rem;
+	font-family: "thai";
+	margin: 0.5rem 0 1.5rem;
 }
 #mainIntroInner .main-intro-right h2 {
-  color: #1e6794;
-  font-size: 2.1rem;
-  font-family: "SB-L";
+	color: #1e6794;
+	font-size: 2.1rem;
+	font-family: "SB-L";
 }
 #mainIntroInner .main-intro-right p.main-intro-subT {
-  color: #7f7f7f;
-  margin: 3rem 0 0.75rem;
+	color: #7f7f7f;
+	margin: 3rem 0 0.75rem;
 }
 
 /* 디지털 소장자료 */
 #mainCollection {
-  width: 100%;
-  height: 50rem;
-  background: url(/common/img/main_coll_back.jpg) no-repeat;
-  background-size: cover;
-  top: -5rem;
-  position: relative;
-  padding: 9rem 0 0;
+	width: 100%;
+	height: 50rem;
+	background: url(/common/img/main_coll_back.jpg) no-repeat;
+	background-size: cover;
+	top: -5rem;
+	position: relative;
+	padding: 9rem 0 0;
 }
 
 #mainCollInner .main-coll-text {
-  color: #fff;
+	color: #fff;
 }
 #mainCollInner .main-coll-text h3 {
-  font-size: 2.1rem;
-  font-family: "GS-M";
-  line-height: 1.3;
+	font-size: 2.1rem;
+	font-family: "GS-M";
+	line-height: 1.3;
 }
 #mainCollInner .main-coll-text h3 span {
-  display: block;
+	display: block;
 }
 #mainCollInner .main-coll-text p.main-coll-subT {
-  margin: 1.3rem 0 4.3rem 0;
-  font-size: 0.9rem;
-  letter-spacing: 2px;
+	margin: 1.3rem 0 4.3rem 0;
+	font-size: 0.9rem;
+	letter-spacing: 2px;
 }
 #mainCollInner .main-coll-text .main-coll-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 5rem;
-  border: 2px solid #fff;
-  padding: 0.1rem 1rem 0.1rem 1.25rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 5rem;
+	border: 2px solid #fff;
+	padding: 0.1rem 1rem 0.1rem 1.25rem;
 }
 #mainCollInner .main-coll-items {
-  max-width: 768px;
-  padding: 0 0.5rem;
+	max-width: 768px;
+	padding: 0 0.5rem;
 }
 #mainCollInner .main-coll-items ul {
-  display: grid;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
 }
 #mainCollInner .main-coll-items ul li {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
+	position: relative;
 }
 #mainCollInner .main-coll-items ul li img {
-  aspect-ratio: 5/5.7;
+	aspect-ratio: 5/7.4;
+	width: 100%;
 }
 #mainCollInner .main-coll-items ul li label {
-  padding: 1.5rem 0;
-  color: #f7f7f7;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	display: block;
+	width: 100%;
+	padding: 1.5rem 0;
+	font-size: 0.8rem;
+	color: #f7f7f7;
+	text-align: center;
+	background: #fff;
 }
 
 /*main.css End*/
