--- a/usr/css/_main.scss
+++ b/usr/css/_main.scss
@@ -1,4 +1,6 @@
 /*main_css*/
+
+/* 메인화면_검색창 */
 #mainSearch{
     background:url(/common/img/main_back_01.jpg) no-repeat;
     width:100%;
@@ -20,10 +22,10 @@
         gap: 0.4rem;
         select{
             flex-grow:0;
-            color:#fff;
+            color:rgba(var(--white),1);
             padding:.5rem 1.8rem;
-            font-size:.6rem;
-            border:1px solid #fff;
+            font-size:var(--font13);
+            border:1px solid rgba(var(--white),1);
             width:7.5rem;
             gap:.6rem;
             cursor:pointer;
@@ -34,7 +36,7 @@
         justify-content: center;
         align-items:center;
         gap:1rem;
-        color:#fff;
+        color:rgba(var(--white),1);
         
         img{
             width:3rem;
@@ -45,24 +47,28 @@
     }   
     .main-search-bar{
         width:700px;
-        background:#ededed;
+        background:rgba(var(--white),.75);
         padding:1rem;
         display:flex;
         
         input{
-            background:#fff;
+            background:rgba(var(--white),1);
             flex-basis:75%;
             padding:.8rem;
+            outline: 0;
         }
         button{
-            background:#1e3964;
-            color:#fff;
+            background:rgba(var(--marineblue),1);
+            color:rgba(var(--white),1);
             flex-basis:25%;
             padding:.8rem;
+            cursor:pointer;
         }
     }
     
 }
+
+/* 메인화면_소개영역 */
 
 #mainIntro{
     background:url(/common/img/back_cloud.jpg);
@@ -102,29 +108,33 @@
             }
         }
         p{
-            color:#4f4f4f;
+            color:rgba(var(--black),.75);
             line-height:1.6;
-            font-size:1.2rem;
+            font-size:var(--font20);
         }
         &.vt-line{
             width:2px;
             height: 21rem;
-            background: #1e6794;
+            background: rgba(var(--royalblue),1);
             margin: 5rem 0 8rem;
         }
     }
     .main-intro-left{
         h2{
             color:#002855;
-            font-size:2.1rem;
+            font-size: var(--font42);
+            font-weight: 900;
             span{
                 color:#e60a19;
             }
         }
         p{
             &.main-intro-subT{
-                font-family:'thai';
-                margin:.5rem 0 1.5rem;
+                font-family:var(--Nanum);
+                margin:1rem 0 1.5rem;
+                font-weight: 900;
+                font-size: var(--font18);
+                letter-spacing:3px;
             }
         }
         
@@ -132,8 +142,8 @@
     .main-intro-right{
         h2{
             color:#1e6794;
-            font-size:2.1rem;
-            font-family:'SB-L';
+            font-size:var(--font42);
+            font-family: 'thai';
         }
         p{
             &.main-intro-subT{
@@ -157,20 +167,23 @@
 }
 
 #mainCollInner{
+    justify-content: space-between;
+    
     .main-coll-text{
         color:#fff;
         h3{
-            font-size:2.1rem;
-            font-family:'GS-M';
+            font-size:var(--font42);
+            font-family: var(--gMark);
             line-height: 1.3;
+            font-weight: normal;
             span{
                 display:block;
             }    
         }
         p{
             &.main-coll-subT{
-                margin:1.3rem 0 4.3rem 0;
-                font-size:.9rem;
+                margin:1rem 0 4.3rem 0;
+                font-size:var(--font18);
                 letter-spacing: 2px;
             }
         }
@@ -178,21 +191,28 @@
             display:flex;
             justify-content:center;
             align-items:center;
-            width:5rem;
+            width:5.5rem;
             border:2px solid #fff;
-            padding: 0.1rem 1rem 0.1rem 1.25rem;
+            padding: 0.25rem 1.25rem 0.25rem 1.75rem;
+            cursor:pointer;
+            svg{
+                flex-shrink: 0;
+            }
         }
     }
     .main-coll-items{
         max-width:768px;
         padding:0 .5rem;
+        width: 100%;
         ul{
             display:grid;
             grid-template-columns:1fr 1fr 1fr;
+            grid-gap:1.8rem 1rem;
             li{
                 display:flex;
                 flex-direction:column;
                 position:relative;
+                cursor:pointer;
                 img{
                     aspect-ratio: 5/7.4;
                     width:100%;
@@ -204,14 +224,98 @@
                     display:block;
                     width:100%;
                     padding:1.5rem 0;
-                    font-size:.8rem;
-                    color:#f7f7f7;
+                    font-size:var(--font18);
+                    color: rgba(var(--black),.5);
                     text-align:center;
                     background:#fff;
-                    
+                    font-family:var(--gMark);
+                    border-left:1px solid rgba(var(--black),1);
+                    border-right:1px solid rgba(var(--black),1);
+                    border-bottom:1px solid rgba(var(--black),1);
                 }
             }
         }
     }
 }
+
+/* 주제별 기록물 */
+
+#mainSubject{
+    width:100%;
+    height:65rem;
+    background:url(/common/img/main_subject_back.jpg) no-repeat;
+    background-size:cover;
+    top: -5rem;
+    position: relative;
+    padding: 9rem 0 0;
+}
+
+#mainSubjectInner{
+    justify-content: space-between;
+    
+    .main-subject-text{
+        color:#fff;
+        h3{
+            font-size:var(--font42);
+            font-family: var(--gMark);
+            line-height: 1.3;
+            font-weight: normal;
+            span{
+                display:block;
+            }    
+        }
+        p{
+            &.main-subject-subT{
+                margin:1rem 0 4.3rem 0;
+                font-size:var(--font18);
+                letter-spacing: 2px;
+            }
+        }
+        .main-subject-button{
+            display:flex;
+            justify-content:center;
+            align-items:center;
+            width:5.5rem;
+            border:2px solid #fff;
+            padding: 0.25rem 1.25rem 0.25rem 1.75rem;
+            cursor:pointer;
+            svg{
+                flex-shrink: 0;
+            }
+        }
+    }
+    .main-subject-items{
+        max-width:768px;
+        padding:0 .5rem;
+        width: 100%;
+        display:grid;
+        grid-template-columns:1fr 1fr;
+        grid-gap:1rem;
+        > ul{
+            padding:1.5rem 2.2rem;
+            display:flex;
+            flex-direction:column;
+            background-image:radial-gradient(rgba(var(--coral),0) 5%, rgba(var(--coral),.85) 5%, rgba(var(--coral),.85) 100%);
+            background-position:-11rem -7rem;
+            &:nth-child(1), &:nth-child(4){
+                background-image:radial-gradient(rgba(var(--coral),0) 5%, rgba(var(--coral),.45) 5%, rgba(var(--coral),.45) 100%);
+            }
+            li{
+                font-family:var(--gMark);
+                font-size:var(--font22);
+                height:2rem;
+                padding: 1.25rem 0;
+                &:first-child{
+                    color:rgba(var(--white),1);
+                    border-bottom:1px solid rgba(var(--white),1);
+                    font-size:var(--font24);
+                    margin-bottom:1.5rem;
+                    height: auto;
+                }
+            }
+        }
+    }
+}
+
+
 /*main.css End*/
