--- a/usr/style.css
+++ b/usr/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 /*main_css*/
+/* 메인화면_검색창 */
 #mainSearch {
   background: url(/common/img/main_back_01.jpg) no-repeat;
   width: 100%;
@@ -22,10 +23,10 @@
 }
 #mainSearch .main-top-select select {
   flex-grow: 0;
-  color: #fff;
+  color: rgba(var(--white), 1);
   padding: 0.5rem 1.8rem;
-  font-size: 0.6rem;
-  border: 1px solid #fff;
+  font-size: var(--font13);
+  border: 1px solid rgba(var(--white), 1);
   width: 7.5rem;
   gap: 0.6rem;
   cursor: pointer;
@@ -35,7 +36,7 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  color: #fff;
+  color: rgba(var(--white), 1);
 }
 #mainSearch .main-search-title img {
   width: 3rem;
@@ -45,22 +46,25 @@
 }
 #mainSearch .main-search-bar {
   width: 700px;
-  background: #ededed;
+  background: rgba(var(--white), 0.75);
   padding: 1rem;
   display: flex;
 }
 #mainSearch .main-search-bar input {
-  background: #fff;
+  background: rgba(var(--white), 1);
   flex-basis: 75%;
   padding: 0.8rem;
+  outline: 0;
 }
 #mainSearch .main-search-bar button {
-  background: #1e3964;
-  color: #fff;
+  background: rgba(var(--marineblue), 1);
+  color: rgba(var(--white), 1);
   flex-basis: 25%;
   padding: 0.8rem;
+  cursor: pointer;
 }
 
+/* 메인화면_소개영역 */
 #mainIntro {
   background: url(/common/img/back_cloud.jpg);
   background-size: cover;
@@ -91,31 +95,35 @@
   margin: 5rem auto 2.5rem;
 }
 #mainIntroInner > div p {
-  color: #4f4f4f;
+  color: rgba(var(--black), 0.75);
   line-height: 1.6;
-  font-size: 1.2rem;
+  font-size: var(--font20);
 }
 #mainIntroInner > div.vt-line {
   width: 2px;
   height: 21rem;
-  background: #1e6794;
+  background: rgba(var(--royalblue), 1);
   margin: 5rem 0 8rem;
 }
 #mainIntroInner .main-intro-left h2 {
   color: #002855;
-  font-size: 2.1rem;
+  font-size: var(--font42);
+  font-weight: 900;
 }
 #mainIntroInner .main-intro-left h2 span {
   color: #e60a19;
 }
 #mainIntroInner .main-intro-left p.main-intro-subT {
-  font-family: "thai";
-  margin: 0.5rem 0 1.5rem;
+  font-family: var(--Nanum);
+  margin: 1rem 0 1.5rem;
+  font-weight: 900;
+  font-size: var(--font18);
+  letter-spacing: 3px;
 }
 #mainIntroInner .main-intro-right h2 {
   color: #1e6794;
-  font-size: 2.1rem;
-  font-family: "SB-L";
+  font-size: var(--font42);
+  font-family: "thai";
 }
 #mainIntroInner .main-intro-right p.main-intro-subT {
   color: #7f7f7f;
@@ -133,47 +141,148 @@
   padding: 9rem 0 0;
 }
 
+#mainCollInner {
+  justify-content: space-between;
+}
 #mainCollInner .main-coll-text {
   color: #fff;
 }
 #mainCollInner .main-coll-text h3 {
-  font-size: 2.1rem;
-  font-family: "GS-M";
+  font-size: var(--font42);
+  font-family: var(--gMark);
   line-height: 1.3;
+  font-weight: normal;
 }
 #mainCollInner .main-coll-text h3 span {
   display: block;
 }
 #mainCollInner .main-coll-text p.main-coll-subT {
-  margin: 1.3rem 0 4.3rem 0;
-  font-size: 0.9rem;
+  margin: 1rem 0 4.3rem 0;
+  font-size: var(--font18);
   letter-spacing: 2px;
 }
 #mainCollInner .main-coll-text .main-coll-button {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 5rem;
+  width: 5.5rem;
   border: 2px solid #fff;
-  padding: 0.1rem 1rem 0.1rem 1.25rem;
+  padding: 0.25rem 1.25rem 0.25rem 1.75rem;
+  cursor: pointer;
+}
+#mainCollInner .main-coll-text .main-coll-button svg {
+  flex-shrink: 0;
 }
 #mainCollInner .main-coll-items {
   max-width: 768px;
   padding: 0 0.5rem;
+  width: 100%;
 }
 #mainCollInner .main-coll-items ul {
   display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1.8rem 1rem;
 }
 #mainCollInner .main-coll-items ul li {
   display: flex;
   flex-direction: column;
+  position: relative;
+  cursor: pointer;
 }
 #mainCollInner .main-coll-items ul li img {
-  aspect-ratio: 5/5.7;
+  aspect-ratio: 5/7.4;
+  width: 100%;
 }
 #mainCollInner .main-coll-items ul li label {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: block;
+  width: 100%;
   padding: 1.5rem 0;
-  color: #f7f7f7;
+  font-size: var(--font18);
+  color: rgba(var(--black), 0.5);
+  text-align: center;
+  background: #fff;
+  font-family: var(--gMark);
+  border-left: 1px solid rgba(var(--black), 1);
+  border-right: 1px solid rgba(var(--black), 1);
+  border-bottom: 1px solid rgba(var(--black), 1);
+}
+
+/* 주제별 기록물 */
+#mainSubject {
+  width: 100%;
+  height: 65rem;
+  background: url(/common/img/main_subject_back.jpg) no-repeat;
+  background-size: cover;
+  top: -5rem;
+  position: relative;
+  padding: 9rem 0 0;
+}
+
+#mainSubjectInner {
+  justify-content: space-between;
+}
+#mainSubjectInner .main-subject-text {
+  color: #fff;
+}
+#mainSubjectInner .main-subject-text h3 {
+  font-size: var(--font42);
+  font-family: var(--gMark);
+  line-height: 1.3;
+  font-weight: normal;
+}
+#mainSubjectInner .main-subject-text h3 span {
+  display: block;
+}
+#mainSubjectInner .main-subject-text p.main-subject-subT {
+  margin: 1rem 0 4.3rem 0;
+  font-size: var(--font18);
+  letter-spacing: 2px;
+}
+#mainSubjectInner .main-subject-text .main-subject-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 5.5rem;
+  border: 2px solid #fff;
+  padding: 0.25rem 1.25rem 0.25rem 1.75rem;
+  cursor: pointer;
+}
+#mainSubjectInner .main-subject-text .main-subject-button svg {
+  flex-shrink: 0;
+}
+#mainSubjectInner .main-subject-items {
+  max-width: 768px;
+  padding: 0 0.5rem;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1rem;
+}
+#mainSubjectInner .main-subject-items > ul {
+  padding: 1.5rem 2.2rem;
+  display: flex;
+  flex-direction: column;
+  background-image: radial-gradient(rgba(var(--coral), 0) 5%, rgba(var(--coral), 0.85) 5%, rgba(var(--coral), 0.85) 100%);
+  background-position: -11rem -7rem;
+}
+#mainSubjectInner .main-subject-items > ul:nth-child(1), #mainSubjectInner .main-subject-items > ul:nth-child(4) {
+  background-image: radial-gradient(rgba(var(--coral), 0) 5%, rgba(var(--coral), 0.45) 5%, rgba(var(--coral), 0.45) 100%);
+}
+#mainSubjectInner .main-subject-items > ul li {
+  font-family: var(--gMark);
+  font-size: var(--font22);
+  height: 2rem;
+  padding: 1.25rem 0;
+}
+#mainSubjectInner .main-subject-items > ul li:first-child {
+  color: rgba(var(--white), 1);
+  border-bottom: 1px solid rgba(var(--white), 1);
+  font-size: var(--font24);
+  margin-bottom: 1.5rem;
+  height: auto;
 }
 
 /*main.css End*/
