--- a/usr/style.css
+++ b/usr/style.css
@@ -262,20 +262,19 @@
   grid-gap: 1rem;
 }
 #mainSubjectInner .main-subject-items > ul {
-  padding: 1.5rem 2.2rem;
+  padding: 2rem 2.2rem;
   display: flex;
   flex-direction: column;
-  background-image: radial-gradient(rgba(var(--coral), 0) 5%, rgba(var(--coral), 0.85) 5%, rgba(var(--coral), 0.85) 100%);
-  background-position: -11rem -7rem;
+  background-image: radial-gradient(rgba(var(--coral), 0) 5%, rgba(var(--coral), 0.9) 5%, rgba(var(--coral), 0.9) 100%);
+  background-position: -11rem -6.5rem;
 }
 #mainSubjectInner .main-subject-items > ul:nth-child(1), #mainSubjectInner .main-subject-items > ul:nth-child(4) {
-  background-image: radial-gradient(rgba(var(--coral), 0) 5%, rgba(var(--coral), 0.45) 5%, rgba(var(--coral), 0.45) 100%);
+  background-image: radial-gradient(rgba(var(--opcoral), 0) 5%, rgba(var(--opcoral), 0.82) 5%, rgba(var(--opcoral), 0.82) 100%);
 }
 #mainSubjectInner .main-subject-items > ul li {
   font-family: var(--gMark);
   font-size: var(--font22);
-  height: 2rem;
-  padding: 1.25rem 0;
+  padding: 0.5rem 0;
 }
 #mainSubjectInner .main-subject-items > ul li:first-child {
   color: rgba(var(--white), 1);
@@ -283,6 +282,7 @@
   font-size: var(--font24);
   margin-bottom: 1.5rem;
   height: auto;
+  padding: 0.5rem 0 1rem;
 }
 
 /*main.css End*/
