--- a/usr/css/include/_totalSearch.scss
+++ b/usr/css/include/_totalSearch.scss
@@ -1,32 +1,3 @@
-#total-search-box {
-    width: 1280px;
-    height: 15.5rem;
-    margin: 0 auto;
-    background-color: rgba(var(--black), .05);
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-    justify-content: center;
-
-
-}
-
-.search-title-box {
-
-    width: 1000px;
-    margin: 0 auto;
-    padding-left: 1.8rem;
-
-    .search-title-text {
-        font-size: 1.4rem;
-        color: rgba(var(--royalblue), 1);
-        align-self: flex-start;
-        margin-bottom: 1.7rem;
-        font-weight: 900;
-    }
-
-}
-
 // Components - Total Search
 
 #totalSearch {
@@ -272,7 +243,7 @@
         gap: 1rem;
 
 
-        span {
+        .Recent_searches {
             font-weight: 900;
             &::after {
                 content: '';
@@ -285,6 +256,12 @@
 
         li{
             color: rgba(var(--black), .5);
+            display: flex;
+            gap: .5rem;
+            
+            svg{
+                cursor: pointer;
+            }
 
         }
 
