--- a/common/css/default.scss
+++ b/common/css/default.scss
@@ -82,3 +82,9 @@ body{
 button{
   cursor:pointer;
 }
+
+#backgroundImg{
+  background-image: url(/common/img/back_cloud.png);
+  width: 100%;
+  height: auto;
+}
