--- a/common/css/default.css
+++ b/common/css/default.css
@@ -71,3 +71,9 @@ body {
 button {
 	cursor: pointer;
 }
+
+#backgroundImg {
+	background-image: url(/common/img/back_cloud.png);
+	width: 100%;
+	height: auto;
+}
