--- a/usr/style.css
+++ b/usr/style.css
@@ -286,3 +286,43 @@
 }
 
 /*main.css End*/
+header {
+  width: 100%;
+  height: 5rem;
+  background: rgba(var(--white), 1);
+}
+
+#headerTop > div {
+  display: flex;
+}
+#headerTop .hd-logo-div {
+  gap: 1rem;
+}
+#headerTop .hd-logo-div img {
+  width: 2rem;
+}
+#headerTop .hd-logo-div p {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  color: rgba(var(--marineblue), 1);
+  font-size: var(--font18);
+  font-weight: bold;
+}
+
+nav {
+  width: 100%;
+  height: 5rem;
+  background: rgba(var(--marineblue), 0.8);
+}
+nav > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: inherit;
+}
+nav > div a {
+  color: #fff;
+  font-size: var(--font22);
+  font-weight: bold;
+}
