--- a/common/css/default.scss
+++ b/common/css/default.scss
@@ -4,6 +4,12 @@
     display:flex;
 }
 
+.web-inner-depth{
+  max-width:1024px;
+  margin:0 auto;
+  display:flex;
+}
+
 
 @font-face {
     font-family: "thai";
