--- a/usr/style.css
+++ b/usr/style.css
@@ -312,10 +312,12 @@
 
 header {
   width: 100%;
+}
+
+#headerTop {
   height: 5rem;
   background: rgba(var(--white), 1);
 }
-
 #headerTop > div {
   display: flex;
 }
