디지털 자료검색

--- a/usr/style.scss
+++ b/usr/style.scss
@@ -2,10 +2,13 @@
 //pages
 @import
     'css/pages/main.scss',
-    'css/pages/digital.scss';
+    'css/pages/digital.scss',
+    'css/pages/login.scss'
+    ;
 
     
 //include
 @import
     'css/include/header.scss',
-    'css/include/totalSearch.scss';
+    'css/include/totalSearch.scss'
+    ;
