--- a/usr/style.css
+++ b/usr/style.css
@@ -317,15 +317,27 @@ header {
 #headerTop {
   height: 5rem;
   background: rgba(var(--white), 1);
+  align-items: center;
+  justify-content: flex-end;
+  gap: 2rem;
 }
 #headerTop > div {
   display: flex;
 }
+#headerTop > a.hd-outer-link {
+  color: rgba(var(--marineblue), 1);
+  font-size: var(--font16);
+  font-weight: bold;
+}
 #headerTop .hd-logo-div {
-  gap: 1rem;
+  align-items: center;
+  gap: 0.5rem;
+  margin: 0 auto 0 3rem;
 }
 #headerTop .hd-logo-div img {
-  width: 2rem;
+  width: 2.2rem;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 #headerTop .hd-logo-div p {
   display: flex;
@@ -333,24 +345,91 @@ header {
   justify-content: start;
   color: rgba(var(--marineblue), 1);
   font-size: var(--font18);
-  font-weight: bold;
+  font-weight: 900;
+}
+#headerTop .hd-search-bar {
+  border: 1px solid rgba(var(--black), 0.5);
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  border-radius: 2rem;
+}
+#headerTop .hd-search-bar input {
+  outline: 0;
+  border: none;
+  padding: 0.8rem 1.2rem;
+  width: 18rem;
+}
+#headerTop .hd-search-bar button {
+  outline: 0;
+  border: none;
+  font-size: var(--font13);
+  padding: 0.3rem 1.2rem;
+}
+#headerTop .hd-language-select {
+  padding: 0.3rem 1rem 0.3rem 0.5rem;
+  background: rgba(var(--marineblue), 1);
+  color: rgba(var(--white), 1);
+  font-size: var(--font13);
+  border-radius: 1rem;
 }
 
 nav {
   width: 100%;
   height: 5rem;
   background: rgba(var(--marineblue), 0.8);
+  position: relative;
 }
 nav > div {
-  display: flex;
+  display: grid !important;
   align-items: center;
-  justify-content: center;
+  grid-template-columns: repeat(6, 1fr);
   height: inherit;
+  width: 100%;
 }
-nav > div a {
+nav a {
   color: #fff;
   font-size: var(--font22);
   font-weight: bold;
+  text-align: center;
+  line-height: 5rem;
+}
+
+#subNav {
+  position: absolute;
+  bottom: -5rem;
+  left: 0;
+  width: 100%;
+  height: 5rem;
+  background: rgba(var(--black), 7);
+  padding-top: 1rem;
+}
+#subNav > div {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+}
+#subNav > div ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+  width: 100%;
+}
+#subNav > div a {
+  color: rgba(var(--white), 1);
+  text-align: center;
+  width: 100%;
+  display: block;
+  line-height: 1.75;
+  font-size: var(--font16);
+}
+
+.hd-subNav-hidden {
+  display: none;
+}
+
+.hd-subNav-show {
+  display: block;
 }
 
 #totalSearch {
