--- a/usr/css/pages/_digital.scss
+++ b/usr/css/pages/_digital.scss
@@ -103,11 +103,9 @@
 }
 
 
-.btnStyle{
+
+
+.round_btnStyle{
     width: 11.25rem;
-    height: 2.5rem;
-    background-color: rgba(var(--royalblue), 1);
-    color: rgba(var(--white), 1);
-    border-radius: 25rem;
     margin-top: 2.5rem;
 }
