--- a/common/css/default.css
+++ b/common/css/default.css
@@ -83,3 +83,17 @@ button {
 	width: 100%;
 	height: auto;
 }
+
+.round_btnStyle {
+	background-color: rgba(var(--royalblue), 1);
+	color: rgba(var(--white), 1);
+	border-radius: 25rem;
+	padding: 0.8rem;
+}
+
+.Square_btnStyle {
+	background-color: rgba(var(--royalblue), 1);
+	color: rgba(var(--white), 1);
+	border-radius: 0.5rem;
+	padding: 0.8rem;
+}
