--- a/usr/css/pages/_login.scss
+++ b/usr/css/pages/_login.scss
@@ -1,9 +1,46 @@
 /*login.css*/
 
 #login-page{
-    width: 20.5rem;
+    width: 22.5rem;
     margin: 0 auto;
     display: grid;
     place-items: center;
     height: inherit;
+    padding: 1rem;
+    background-color: #f1f1f1;
+}
+
+.login-title-img{
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    margin-bottom: 2rem;
+    img{
+        width: 2rem;
+    }
+
+    p{
+        font-size: 1.1rem;
+        color: rgba(var(--royalblue), 1);
+        font-weight: 900;
+    }
+}
+.login-form-text{
+    input{
+        width: 100%;
+        border: 1px solid rgba(var(--black), .1);
+        background-color: rgba(var(--white), .9);
+        padding: .75rem;
+        outline: 0;
+
+        &:focus-within{
+            border-color: rgba(var(--royalblue), 0.3);
+            box-shadow: 0 0 0 0.1rem rgba(var(--royalblue), 0.1);
+
+        }
+    }
+    input + input{
+        margin-top: .5rem
+    };
+
 }
