--- a/usr/style.css
+++ b/usr/style.css
@@ -375,8 +375,7 @@
 	content: "- ";
 	color: rgba(var(--black), 0.65);
 }
-
-.round_btnStyle {
+.digtal-data-list button {
 	width: 11.25rem;
 	margin-top: 2.5rem;
 }
