--- a/usr/css/include/_header.scss
+++ b/usr/css/include/_header.scss
@@ -53,7 +53,7 @@ header{
         }
     }
     .hd-language-select{
-        padding:.3rem 1rem .3rem .5rem;
+        padding:0.3rem 1.2rem 0.2rem 0.7rem;
         background:rgba(var(--marineblue),1);
         color:rgba(var(--white),1);
         font-size:var(--font13);
