--- a/usr/css/pages/_login.scss
+++ b/usr/css/pages/_login.scss
@@ -3,11 +3,18 @@
 #login-page{
     width: 22.5rem;
     margin: 0 auto;
+    min-height: 100vh;
     display: grid;
     place-items: center;
-    height: inherit;
     padding: 1rem;
-    background-color: #f1f1f1;
+    
+}
+
+#login-page-inner{
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .login-title-img{
@@ -15,17 +22,19 @@
     align-items: center;
     gap: .5rem;
     margin-bottom: 2rem;
+
     img{
-        width: 2rem;
+        width: 2.2rem;
     }
 
     p{
-        font-size: 1.1rem;
+        font-size: 1.2rem;
         color: rgba(var(--royalblue), 1);
         font-weight: 900;
     }
 }
 .login-form-text{
+
     input{
         width: 100%;
         border: 1px solid rgba(var(--black), .1);
@@ -38,9 +47,51 @@
             box-shadow: 0 0 0 0.1rem rgba(var(--royalblue), 0.1);
 
         }
+        &::placeholder{
+            color: rgba(var(--black), .4);
+        }
+
+        // &:placeholder-shown{
+        //     background-color: transparent
+        // }
     }
     input + input{
-        margin-top: .5rem
-    };
+        margin-top: .5rem;
+    }
+
+    button{
+        width: 100%;
+        margin-top: 2rem;
+        font-weight: bold;
+    }
 
 }
+
+.chkbox-keeplog{
+    align-self: flex-start;
+    margin-top: 1.5rem;
+}
+
+.login-Find-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .75rem;
+    border: 1px solid rgba(var(--black), .1);
+    padding: .85rem;
+    width: 100%;
+    margin-top: 3rem;
+
+    p{
+        cursor: pointer;
+        color: rgba(var(--black), .5);
+    }
+
+    hr {
+        height: 0.5rem;
+        width: 0.05rem;
+        background-color:rgba(var(--black), .1);
+        
+    }
+}
+
