--- a/usr/style.scss
+++ b/usr/style.scss
@@ -10,5 +10,6 @@
 //include
 @import
     'css/include/header.scss',
-    'css/include/totalSearch.scss'
+    'css/include/totalSearch.scss',
+    'css/include/btmSlider.scss'
     ;
