--- a/usr/css/include/_btmSlider.scss
+++ b/usr/css/include/_btmSlider.scss
@@ -13,6 +13,7 @@
             font-size:var(--font22);
             width:7rem;
             text-align:center;
+            letter-spacing: 2px;
         }
         .common-slider-container{
             max-width:1140px;
@@ -22,7 +23,18 @@
                 width: 100%;
                 overflow: hidden;
                 .swiper-wrapper{
-                    
+                    display:flex;
+                    align-items:center;
+                    img{
+                        height:1.5rem;
+                        margin: 0 auto;
+                        &.common-slideimg-height{
+                            height:3rem;
+                        }
+                        &.common-slideimg-height02{
+                            height:1.75rem;
+                        }
+                    }   
                 }
                 .swiper-button-prev, .swiper-button-next{
                     width:1.25rem;
@@ -30,12 +42,13 @@
                     position:absolute;
                     top:50%;
                     transform:translateY(-50%);
+                    cursor:pointer;
                 }
     
                 .swiper-button-prev{
                     background:url(/common/img/arr_left.svg) no-repeat;
                     background-size:contain;
-                    left:1.5rem;
+                    left:2rem;
                 }
                 .swiper-button-next{
                     background:url(/common/img/arr_right.svg) no-repeat;
