--- a/usr/style.scss
+++ b/usr/style.scss
@@ -3,7 +3,8 @@
 @import
     'css/pages/main.scss',
     'css/pages/digital.scss',
-    'css/pages/login.scss'
+    'css/pages/login.scss',
+    'css/pages/archive.scss'
     ;
 
     
