--- a/usr/style.css
+++ b/usr/style.css
@@ -902,3 +902,24 @@ nav a {
   background-color: rgba(var(--royalblue), 1);
   color: rgba(var(--white), 1);
 }
+
+footer {
+  display: flex;
+  justify-content: start;
+  width: 100%;
+  height: 8rem;
+  background: rgba(var(--black), 0.15);
+}
+footer > img {
+  height: 4rem;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin: 0 2rem;
+}
+footer .footer-admin-login {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  gap: 0.5rem;
+  color: rgba(var(--black), 0.5);
+}
