--- a/usr/style.scss
+++ b/usr/style.scss
@@ -12,5 +12,6 @@
     'css/include/header.scss',
     'css/include/totalSearch.scss',
     'css/include/btmSlider.scss',
-    'css/include/custom_checkbox.scss'
+    'css/include/custom_checkbox.scss',
+    'css/include/footer.scss'
     ;
