--- a/common/css/variables.scss
+++ b/common/css/variables.scss
@@ -38,10 +38,9 @@
     --font13: .65rem;
 
     /*font-family*/
-    --gMark: 'GS', sans-serif;
-    --sunBatang: 'SB', sans-serif;
-    --Nanum: 'NS';
-    --thai:'thai', sans-serif;
+    --NG: 'NG', sans-serif;
+    --NM: 'NM', sans-serif;
+    --BN: 'BN';
 
     // var(--gMark); 사용법
 
