--- a/common/css/default.css
+++ b/common/css/default.css
@@ -13,50 +13,50 @@
 
 /* 고딕체 - 나눔바른고딕 */
 @font-face {
-  font-family: "NG";
-  font-weight: normal;
-  src: url("/common/font/NanumBarunGothic_0.ttf") format("truetype");
+	font-family: "NG";
+	font-weight: normal;
+	src: url("/common/font/NanumBarunGothic_0.ttf") format("truetype");
 }
 @font-face {
-  font-family: "NG";
-  font-weight: bold;
-  src: url("/common/font/NanumBarunGothicBold_0.ttf") format("truetype");
+	font-family: "NG";
+	font-weight: bold;
+	src: url("/common/font/NanumBarunGothicBold_0.ttf") format("truetype");
 }
 @font-face {
-  font-family: "NG";
-  font-weight: 300;
-  src: url("/common/font/NanumBarunGothicLight_0.ttf") format("truetype");
+	font-family: "NG";
+	font-weight: 300;
+	src: url("/common/font/NanumBarunGothicLight_0.ttf") format("truetype");
 }
 /* 명조체 - 나눔명조 */
 @font-face {
-  font-family: "NM";
-  font-weight: normal;
-  src: url("/common/font/NanumMyeongjo.ttf") format("truetype");
+	font-family: "NM";
+	font-weight: normal;
+	src: url("/common/font/NanumMyeongjo.ttf") format("truetype");
 }
 @font-face {
-  font-family: "NM";
-  font-weight: bold;
-  src: url("/common/font/NanumMyeongjoBold.ttf") format("truetype");
+	font-family: "NM";
+	font-weight: bold;
+	src: url("/common/font/NanumMyeongjoBold.ttf") format("truetype");
 }
 @font-face {
-  font-family: "NM";
-  font-weight: 900;
-  src: url("/common/font/NanumMyeongjoExtraBold.ttf") format("truetype");
+	font-family: "NM";
+	font-weight: 900;
+	src: url("/common/font/NanumMyeongjoExtraBold.ttf") format("truetype");
 }
 /* 영문폰트 - Browallia New */
 @font-face {
-  font-family: "BN";
-  font-weight: normal;
-  src: url("/common/font/browa.ttf") format("truetype");
+	font-family: "BN";
+	font-weight: normal;
+	src: url("/common/font/browa.ttf") format("truetype");
 }
 @font-face {
-  font-family: "BN";
-  font-weight: bold;
-  src: url("/common/font/browab.ttf") format("truetype");
+	font-family: "BN";
+	font-weight: bold;
+	src: url("/common/font/browab.ttf") format("truetype");
 }
 body {
-  font-family: "NS";
-  font-weight: normal;
+	font-family: var(--NG);
+	font-weight: normal;
 }
 
 button {
