--- a/usr/css/include/_footer.scss
+++ b/usr/css/include/_footer.scss
@@ -2,24 +2,49 @@ footer{
     display:flex;
     justify-content: start;
     width:100%;
-    height:8rem;
-    background:rgba(var(--black),.15);
-    > img{
+    height:11.6rem;
+    background:rgba(var(--black),.05);
+    padding-top:2.3rem;
+    .web-common-inner{
+        width: 100%;
+    }
+    img{
         height:4rem;
         object-fit: contain;
-        margin:0 2rem;
+        padding: 0 1.7rem;
+        width: 7.5rem;
+        box-sizing: content-box;
     }
     .footer-text-side{
-
-    }
-    .footer-admin-login{
         display:flex;
-        align-items:center;
-        margin-left:auto;
-        gap:.5rem;
-        color:rgba(var(--black),.5);
-        svg{
-            
+        flex-direction:column;
+        gap:.75rem;
+        padding:0 1.7rem;
+        p{
+            font-size:var(--font18);
+            text-align:left;
+            color:rgba(var(--black),.75);
+            font-family:'NG';
+            font-weight:300;
+            &.footer-text-bold{
+                font-weight:normal;
+            }
         }
     }
+    .footer-login-side{
+        margin-left:auto;
+        .footer-login-button{
+            display:flex;
+            align-items:center;
+            gap:.5rem;
+            color:rgba(var(--black),.35);
+            p{
+                padding: 0.25rem 0;
+            }
+            svg{
+                
+            }
+        }
+    }
+    
 }
