--- a/usr/css/pages/_main.scss
+++ b/usr/css/pages/_main.scss
@@ -37,7 +37,7 @@
         align-items:center;
         gap:1rem;
         color:rgba(var(--white),1);
-        
+        margin-top:13rem;
         img{
             width:3rem;
         }
@@ -47,22 +47,22 @@
     }   
     .main-search-bar{
         width:700px;
-        background:rgba(var(--white),.75);
-        padding:1rem;
-        display:flex;
-        
+        display:grid;
+        grid-template-columns: 1fr 6rem;;
+        border:.3rem solid rgba(var(--white),1);
+        border-radius:2rem;
         input{
             background:rgba(var(--white),1);
-            flex-basis:75%;
-            padding:.8rem;
+            padding:1rem;
             outline: 0;
+            border-radius:1rem 0 0 1rem;
         }
         button{
             background:rgba(var(--marineblue),1);
             color:rgba(var(--white),1);
-            flex-basis:25%;
             padding:.8rem;
             cursor:pointer;
+            border-radius:0 2rem 2rem 0;
         }
     }
     
@@ -73,10 +73,42 @@
 #mainIntro{
     background:url(/common/img/back_cloud.jpg);
     background-size:cover;
-    clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 100% 100%, 85% 100%, 15% 100%, 0 100%, 0% 85%);
-    top: -5rem;
+    
     position: relative;
     z-index:1;
+    #mainIntroInner{
+        background:url(/common/img/main_red_cloud.jpg);
+        background-size:150%;
+        top: -5rem;
+        position: relative;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        > div{
+            display:flex;
+            flex-direction: column;
+            align-items: center;
+            width:50%;
+            padding:3.5rem 0;
+            h2{
+                margin-bottom:1.5rem;
+                color:rgba(var(--white),1);
+                font-family:'NM';
+                font-weight:bold;
+                font-size:1.5rem;
+            }
+            p{
+                color:rgba(var(--white),1);
+                line-height:1.6;
+                font-size:var(--font20);
+            }
+            &.vt-line{
+                width:2px;
+                height: 8.5rem;
+                background: rgba(var(--white), .5);
+            }
+        }
+  
     // &:before{
     //     content:'';
     //     width:100%;
@@ -87,72 +119,10 @@
     //     left:0;
     //     z-index:0;
     // }
-}
-    
+    }
+}    
 /* 소개(디지털 아카이브, 유네스코 등재) */
 
-#mainIntroInner{
-    justify-content: center;
-    display:flex;
-    > div{
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-        width:50%;
-        .main-introimg-div{
-            width:50%;
-            height:13.5rem;
-            img{
-                height: 5rem;
-                margin: 5rem auto 2.5rem;
-            }
-        }
-        p{
-            color:rgba(var(--black),.75);
-            line-height:1.6;
-            font-size:var(--font20);
-        }
-        &.vt-line{
-            width:2px;
-            height: 21rem;
-            background: rgba(var(--royalblue),1);
-            margin: 5rem 0 8rem;
-        }
-    }
-    .main-intro-left{
-        h2{
-            color:#002855;
-            font-size: var(--font42);
-            font-weight: 900;
-            span{
-                color:#e60a19;
-            }
-        }
-        p{
-            &.main-intro-subT{
-                font-family:var(--Nanum);
-                margin:1rem 0 1.5rem;
-                font-weight: 900;
-                font-size: var(--font18);
-                letter-spacing:3px;
-            }
-        }
-        
-    }
-    .main-intro-right{
-        h2{
-            color:#1e6794;
-            font-size:var(--font42);
-            font-family: 'thai';
-        }
-        p{
-            &.main-intro-subT{
-                color:#7f7f7f;
-                margin:3rem 0 .75rem;
-            }
-        }
-    }
-}
 
 /* 디지털 소장자료 */
 
