--- a/admin/adminStyle.css
+++ b/admin/adminStyle.css
@@ -4,7 +4,7 @@
 #admin-sub-Page {
 	position: relative;
 	width: 100%;
-	height: 17.5rem;
+	height: 13rem;
 	overflow: hidden;
 }
 
@@ -30,7 +30,9 @@
 }
 
 [data-sub-title] {
-	font-size: 2rem;
+	font-size: 1.5rem;
+	font-weight: normal;
+	letter-spacing: 2px;
 }
 
 [data-sub-text] > hr {
