--- a/admin/css/_adminListPage.scss
+++ b/admin/css/_adminListPage.scss
@@ -5,7 +5,7 @@
 #admin-sub-Page {
     position: relative;
     width: 100%;
-    height: 17.5rem;
+    height: 13rem;
     overflow: hidden;
 }
 
@@ -31,7 +31,9 @@
 }
 
 [data-sub-title] {
-    font-size: 2rem;
+    font-size: 1.5rem;
+    font-weight: normal;
+    letter-spacing: 2px;
 }
 
 
