--- a/usr/style.css
+++ b/usr/style.css
@@ -513,7 +513,6 @@
 #archive-content-inner {
 	width: 1024px;
 	margin: 0 auto;
-	background-color: beige;
 }
 
 .archive-top-text h3 {
@@ -527,6 +526,70 @@
 	font-size: var(--font16);
 	color: rgba(var(--black), 0.75);
 	margin-top: 1rem;
+}
+
+.archive-middle-icon {
+	display: flex;
+	flex-flow: row wrap;
+	align-items: center;
+	justify-content: center;
+	padding-top: 3.5rem;
+}
+.archive-middle-icon > div {
+	display: flex;
+	flex-basis: 50%;
+	text-align: center;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.archive-record-box {
+	height: 27rem;
+}
+.archive-record-box h6 {
+	font-size: var(--font28);
+	color: rgba(var(--royalblue), 1);
+	font-weight: normal;
+	margin-top: 2.4rem;
+	margin-bottom: 1.7rem;
+}
+.archive-record-box p {
+	font-size: var(--font20);
+	color: rgba(var(--royalblue), 1);
+	padding: 0.25rem;
+}
+
+.archive-icon-imgs {
+	background-color: rgba(var(--royalblue), 1);
+	width: 11.7rem;
+	height: 11.7rem;
+	margin: 0 auto;
+	border-radius: 25rem;
+}
+
+.archive-icon-img {
+	margin: 0 auto;
+	width: 7rem;
+	height: inherit;
+	background-size: contain;
+	background-position: center center;
+	background-repeat: no-repeat;
+}
+
+.icon-img1 {
+	background-image: url(/common/img/img1.png);
+}
+
+.icon-img2 {
+	background-image: url(/common/img/img2.png);
+}
+
+.icon-img3 {
+	background-image: url(/common/img/img3.png);
+}
+
+.icon-img4 {
+	background-image: url(/common/img/img4.png);
 }
 
 header {
@@ -827,27 +890,27 @@ nav a {
 }
 
 [data-input-chkbox] > input[type=checkbox]:checked + label > [data-check-icon] {
-  background-color: rgba(var(--royalblue), 1);
-  color: rgba(var(--white), 1);
+	background-color: rgba(var(--royalblue), 1);
+	color: rgba(var(--white), 1);
 }
 
 footer {
-  display: flex;
-  justify-content: start;
-  width: 100%;
-  height: 8rem;
-  background: rgba(var(--black), 0.15);
+	display: flex;
+	justify-content: start;
+	width: 100%;
+	height: 8rem;
+	background: rgba(var(--black), 0.15);
 }
 footer > img {
-  height: 4rem;
-  -o-object-fit: contain;
-     object-fit: contain;
-  margin: 0 2rem;
+	height: 4rem;
+	-o-object-fit: contain;
+	   object-fit: contain;
+	margin: 0 2rem;
 }
 footer .footer-admin-login {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-  gap: 0.5rem;
-  color: rgba(var(--black), 0.5);
+	display: flex;
+	align-items: center;
+	margin-left: auto;
+	gap: 0.5rem;
+	color: rgba(var(--black), 0.5);
 }
