--- a/usr/style.scss
+++ b/usr/style.scss
@@ -4,7 +4,8 @@
     'css/pages/main.scss',
     'css/pages/digital.scss',
     'css/pages/login.scss',
-    'css/pages/archive.scss'
+    'css/pages/archive.scss',
+    'css/pages/dataUse.scss'
     ;
 
     
