--- a/usr/css/pages/_archive.scss
+++ b/usr/css/pages/_archive.scss
@@ -5,7 +5,7 @@
     background-color: rgba(var(--black), .1);
 }
 
-#subNav1 {
+#archiveSubNav {
     display: flex;
     flex-flow: row nowrap;
     gap: 0.2rem;
@@ -20,13 +20,12 @@
     width: 100%;
 }
 
-.sub-page-routes1 {
+.archive-sub-routes {
     display: grid;
     place-items: center;
-    // width: 19rem;
     height: 2.5rem;
     background-color: rgba(var(--white), 0.4);
-    color: rgba(var(--white), 0.75);
+    color: rgba(var(--black), 0.35);
     font-size: 0.8rem;
     transition: background-color 0.15s, color 0.15s;
     cursor: pointer;
@@ -48,6 +47,8 @@
     width: 1024px;
     margin: 0 auto;
 }
+
+
 //top
 .archive-top-text {
     h3 {
