--- a/usr/style.css
+++ b/usr/style.css
@@ -451,7 +451,7 @@
 	background-color: rgba(var(--black), 0.1);
 }
 
-#subNav1 {
+#archiveSubNav {
 	display: flex;
 	flex-flow: row nowrap;
 	gap: 0.2rem;
@@ -466,12 +466,12 @@
 	width: 100%;
 }
 
-.sub-page-routes1 {
+.archive-sub-routes {
 	display: grid;
 	place-items: center;
 	height: 2.5rem;
 	background-color: rgba(var(--white), 0.4);
-	color: rgba(var(--white), 0.75);
+	color: rgba(var(--black), 0.35);
 	font-size: 0.8rem;
 	transition: background-color 0.15s, color 0.15s;
 	cursor: pointer;
@@ -480,7 +480,7 @@
 	flex-basis: 50%;
 	font-size: var(--font18);
 }
-.sub-page-routes1.current {
+.archive-sub-routes.current {
 	background-color: rgba(var(--white), 1);
 	color: rgba(var(--black), 1);
 	font-weight: 900;
@@ -610,6 +610,80 @@
 .archive-Builders-list p {
 	padding: 0.6rem;
 	letter-spacing: 1px;
+}
+
+/*dataUse.css*/
+#dataUse-content-inner {
+	margin: 0 auto;
+	width: 1024px;
+}
+
+.dataUse-top-text {
+	padding-top: 5.1rem;
+	padding-bottom: 6.6rem;
+}
+.dataUse-top-text h3 {
+	font-size: var(--font36);
+	color: rgba(var(--royalblue), 1);
+	margin-bottom: 3.5rem;
+}
+
+.dataUse-list-box {
+	display: flex;
+	flex-flow: column nowrap;
+}
+.dataUse-list-box li {
+	padding: 0.4rem 0;
+	font-size: var(--font14);
+	text-indent: -1rem;
+}
+.dataUse-list-box li::before {
+	width: 5px;
+	height: 5px;
+	background-color: rgba(var(--black), 0.7);
+	display: inline-block;
+	vertical-align: middle;
+	border-radius: 5px;
+	margin-right: 0.8rem;
+	content: "";
+}
+.dataUse-bottom-table {
+	width: 100%;
+	margin-bottom: 10rem;
+}
+
+.dataUse-table-info {
+	padding: 1.1rem;
+	background-color: rgba(var(--black), 0.1);
+	font-size: var(--font18);
+}
+
+table {
+	width: 100%;
+	text-align: center;
+	margin-top: 0.25rem;
+}
+
+thead td {
+	border-top: 0;
+}
+
+td {
+	border-top: 1px solid rgba(var(--black), 0.1);
+	border-left: 1px solid rgba(var(--black), 0.1);
+	padding: 2rem 1rem;
+}
+td .qweqwe {
+	text-align: left;
+	width: 60%;
+	margin: 0 auto;
+}
+td:first-child {
+	border-left: 0;
+}
+td img {
+	width: 9rem;
+	margin: 0 auto;
 }
 
 header {
