--- a/usr/css/pages/_archive.scss
+++ b/usr/css/pages/_archive.scss
@@ -73,8 +73,8 @@
     flex-flow: row wrap;
     align-items: center;
     justify-content: center;
-    padding-top: 3.5rem;
-    margin-bottom: 22.5rem;
+    padding-top: 3rem;
+    margin-bottom: 15rem;
 
 
     >div {
@@ -88,27 +88,27 @@
 
 }
 .archive-record-box{
-    height: 27rem;
+    height: 25rem;
 
     h6{
-        font-size: var(--font28);
+        font-size: var(--font22);
         color: rgba(var(--royalblue), 1);
         font-weight: normal;
-        margin-top: 2.4rem;
-        margin-bottom: 1.7rem;
-        font-weight: 900;
+        margin-top: 2rem;
+        margin-bottom: 1.5rem;
+        font-weight: bold;
     }  
     
     p{
-        font-size: var(--font20);
+        font-size: var(--font16);
         color: rgba(var(--royalblue), 1);
         padding: .25rem;
     }
 }
 .archive-icon-imgs{
     background-color: rgba(var(--royalblue), 1);
-    width: 11.7rem;
-    height: 11.7rem;
+    width: 11rem;
+    height: 11rem;
     margin: 0 auto;
     border-radius: 25rem;
 
@@ -172,9 +172,11 @@
         font-size: var(--font22);
         padding: .2rem;
         color: rgba(var(--royalblue), 1);
+        font-weight: bold;
     }
 
-    .qwe{
+    .archive-Builders-text{
+        
         &::before{
             content: '';
             width: 2.2rem;
